--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="styles.css">
-	<title>MyPortfolio</title>
+	<title>My Training Portfolio</title>
 </head>
 
 <body>
@@ -18,63 +18,50 @@
 		</ul>
 	</nav>
 	<div id="welcome-section" class="intro">
-		<h1>Hey i'am Magretron.</h1>
+		<h1>Hey i'am Magretron,</h1>
 		<p>a web developer</p>
 	</div>
 	<div id="projects" class="work">
-		<h2 class="work-header">These are some of my projects..</h2>
-		<a href="https://codepen.io/FreeCodeCamp/pen/NNvBQW" target="_blank" class="project project-tile">
+		<h2 class="work-header">These are some of my training projects..</h2>
+		<a href="https://codepen.io/Kluzer/pen/ywqBRY" target="_blank" class="project project-tile">
 			<img class="project-pic"
-				src="https://cloud.githubusercontent.com/assets/15967809/17642794/d084d718-6171-11e6-83fa-ede5d0a67ad2.png"
+				src="https://cdn.fishki.net/upload/post/2018/02/10/2508503/tn/2-12.jpg"
 				alt="project">
 			<div class="project-title">Tribute Page</div>
 		</a>
-		<a href="https://codepen.io/FreeCodeCamp/pen/ONjoLe" target="_blank" class="project project-tile">
+		<a href="https://codepen.io/Kluzer/full/xBaoVd" target="_blank" class="project project-tile">
 			<img class="project-pic"
-				src="https://cloud.githubusercontent.com/assets/15967809/17642771/7cd6a0c4-6171-11e6-87fb-915f6084d104.png"
+				src="https://github.com/Magretron/Magretron.github.io/blob/master/screenshot.png?raw=true"
 				alt="project">
-			<div class="project-title">Random Quote Machine</div>
+			<div class="project-title">Training landing</div>
 		</a>
 		<a href="https://codepen.io/FreeCodeCamp/pen/PNKdjo" target="_blank" class="project project-tile">
 			<img class="project-pic"
-				src="https://cloud.githubusercontent.com/assets/15967809/17642772/7d02406c-6171-11e6-8c79-40a2933163dc.png"
+				src="https://github.com/Magretron/Form/blob/master/screenshot.png?raw=true"
 				alt="project">
-			<div class="project-title">JavaScript Calculator</div>
+			<div class="project-title">Training form</div>
 		</a>
-		<a href="https://codepen.io/FreeCodeCamp/pen/mVEJag" target="_blank" class="project project-tile">
+		<a href="https://codepen.io/Kluzer/full/LaXdvO" target="_blank" class="project project-tile">
 			<img class="project-pic"
-				src="https://cloud.githubusercontent.com/assets/15967809/17642773/7d08cb94-6171-11e6-8c45-22e7cf64683e.png"
+				src="https://github.com/Magretron/Technical-Documentation/blob/master/screenshot.png?raw=true"
 				alt="project">
-			<div class="project-title">Map Data Across the Globe</div>
+			<div class="project-title">Training documentation</div>
 		</a>
-		<a href="https://codepen.io/FreeCodeCamp/pen/wGqEga" target="_blank" class="project project-tile">
-			<img class="project-pic"
-				src="https://cloud.githubusercontent.com/assets/15967809/17642774/7d091806-6171-11e6-8d47-ecf2f2833fe2.png"
-				alt="project">
-			<div class="project-title">Wikipedia Viewer</div>
-		</a>
-		<a href="https://codepen.io/FreeCodeCamp/pen/KzXQgy" target="_blank" class="project project-tile">
-			<img class="project-pic"
-				src="https://cloud.githubusercontent.com/assets/15967809/17642775/7d354304-6171-11e6-8b56-66eee4681d88.png"
-				alt="project">
-			<div class="project-title">Tic Tac Toe Game</div>
-		</a>
-
-		<a href="https://codepen.io/FreeCodeCamp/" class="show-all" target="_blank">Show all</a>
+		<a href="https://codepen.io/Kluzer/" class="show-all" target="_blank">Show all</a>
 	</div>
 	<div id="contact" class="contact">
 		<div class="header">
 			<h1>Let's work together...</h1>
 			<p>How do you take your coffee?</p>
 		</div>
-		<a href="https://facebook.com/freecodecamp" target="_blank" class="contact-details">Facebook</a>
-		<a id='profile-link' href="https://github.com/freecodecamp" target="_blank" class="contact-details">GitHub</a>
+		<a href="https://www.facebook.com/seruritysystems/notifications/" target="_blank" class="contact-details">Facebook</a>
+		<a id='profile-link' href="https://github.com/Magretron" target="_blank" class="contact-details">GitHub</a>
 		<a href="https://twitter.com/freecodecamp" target="_blank" class="contact-details">Twitter</a>
 		<a href="mailto:example@example.com" class="contact-details">Send a mail</a>
 		<a href="tel:555-555-5555" class="contact-details">Call me</a>
 	</div>
 	<footer>**This is just a fake portfolio.. All the projects and contact details given are not real..
-		<p>&copy; Created for <a href="https://www.freecodecamp.com/" target="_blank">FreeCodeCamp</a></p>
+		<p>&copy; Created of <a href="http://jsstudy.pp.ua/" target="_blank">Magretron</a></p>
 	</footer>
 </body>
 
